--- a/templates/contrato/delete.html
+++ b/templates/contrato/delete.html
@@ -17,7 +17,7 @@
             <div class="d-flex justify-content-center">
                  <button class="btn btn-outline-success mx-2" type="submit">¿Desea eliminar el contrato?</button>
                  <h1 class="fw-bold text-danger text-center ">{{contrato.descripcion}}</h1>
-                  <a class="btn btn-outline-warning ms-2" href="/empleados/contrato_list/">Cancelar</a>
+                  <a class="btn btn-outline-warning ms-2" href="{% url 'empleados:contrato_list' %}">Cancelar</a>
             </div>
          
         </form>
