--- a/templates/home.html
+++ b/templates/home.html
@@ -374,6 +374,9 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'empleados:rol_list' %}">Roles</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'empleados:bonificacion_list' %}">Bonificaciones</a>
+          </li>
         </ul>
         <div class="d-flex">
           <a href="{% url 'empleados:logout' %}" class="btn btn-primary">Cerrar Sesión</a>
