--- a/templates/bonificacion/delete.html
+++ b/templates/bonificacion/delete.html
@@ -15,9 +15,9 @@
         <form method="POST" class="m-4"> 
             {% csrf_token %}
             <div class="d-flex justify-content-center">
-                 <button class="btn btn-outline-success mx-2" type="submit">Eliminar rol de: </button>
-                 <h1 class="fw-bold text-danger text-center ">{{rol.empleado.nombre}}</h1>
-                  <a class="btn btn-outline-warning ms-2" href="{% url 'empleados:rol_list' %}">Cancelar</a>
+                 <button class="btn btn-outline-success mx-2" type="submit">Eliminar bonificación: </button>
+                 <h1 class="fw-bold text-danger text-center ">{{bonificacion.descripcion}}</h1>
+                  <a class="btn btn-outline-warning ms-2" href="{% url 'empleados:bonificacion_list' %}">Cancelar</a>
             </div>
          
         </form>
